[gd_scene format=3 uid="uid://jaxy2x0fnfm4"]

[ext_resource type="Script" uid="uid://dlobmj20yhk1f" path="res://barkley2/scenes/Player/PlayerActor_TurnBased.gd" id="1_cd2oh"]
[ext_resource type="Script" uid="uid://d1ce0668klg2b" path="res://barkley2/scenes/Player/gun_handler™_turnbased_edition.gd" id="2_rvl68"]
[ext_resource type="PackedScene" uid="uid://c54kloot7bcu2" path="res://barkley2/scenes/Objects/System/o_Shadow.tscn" id="2_yky03"]
[ext_resource type="PackedScene" uid="uid://bcbxf4scjowqy" path="res://barkley2/scenes/_utilityStation/oStep_Smoke.tscn" id="3_rvl68"]
[ext_resource type="SpriteFrames" uid="uid://b7053quyhfo7l" path="res://barkley2/resources/Player/hoopz_normal_diaper.tres" id="4_cd2oh"]
[ext_resource type="Texture2D" uid="uid://brnct46keheb6" path="res://barkley2/assets/b2_original/images/merged/s_duergar_shield.png" id="5_d4qtg"]
[ext_resource type="Texture2D" uid="uid://d1mcadd5gf7om" path="res://barkley2/assets/b2_original/images/merged/s_junkbot_larm_shield.png" id="6_odrv2"]
[ext_resource type="SpriteFrames" uid="uid://dpoxlps7mg0dy" path="res://barkley2/resources/Player/combat_lower_body_diaper.tres" id="7_yky03"]
[ext_resource type="SpriteFrames" uid="uid://bv6xvill7phcw" path="res://barkley2/resources/Player/combat_arm_back_diaper.tres" id="8_rvl68"]
[ext_resource type="SpriteFrames" uid="uid://bxgcfih7grb05" path="res://barkley2/resources/Player/combat_upper_body_diaper.tres" id="9_ms3eb"]
[ext_resource type="SpriteFrames" uid="uid://dgnkrv5sdn82d" path="res://barkley2/resources/Player/combat_weapon.tres" id="10_ekk7t"]
[ext_resource type="SpriteFrames" uid="uid://n7jvr12a1htv" path="res://barkley2/resources/Player/combat_weapon_parts.tres" id="11_n6pea"]
[ext_resource type="SpriteFrames" uid="uid://dvqqu8i44hek" path="res://barkley2/resources/Player/combat_weapon_spots.tres" id="12_kss28"]
[ext_resource type="SpriteFrames" uid="uid://qkvh0mkp04w8" path="res://barkley2/resources/Player/combat_arm_front_diaper.tres" id="13_d4qtg"]
[ext_resource type="FontFile" uid="uid://cbgm2fhhwo0ld" path="res://barkley2/resources/fonts/fn2.tres" id="14_m7ku1"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_sbutq"]
friction = 0.25
bounce = 0.25
absorbent = true

[sub_resource type="CircleShape2D" id="CircleShape2D_aubae"]

[sub_resource type="Curve" id="Curve_qfgrm"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0277312), -3.52721, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_wsajw"]
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1)

[sub_resource type="GDScript" id="GDScript_qkpq4"]
resource_name = "hoopz_roll_direction"
script/source = "@tool
extends Line2D

var t := 0.0
var p := 24.0

func set_force( force : float ) -> void:
	p = 100.0 * clampf( force, 0.0, 1.0 )
	p = clampf( p, 24.0, 100.0 )

func _physics_process(delta: float) -> void:
	if visible:
		t += delta * 50.0
		modulate.a = 1.0 - sin(t) * 0.5
		points[1].x = lerpf(points[1].x, p, 0.75 )
"

[sub_resource type="AtlasTexture" id="AtlasTexture_qkpq4"]
atlas = ExtResource("5_d4qtg")
region = Rect2(0, 0, 34, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_cu7n1"]
atlas = ExtResource("5_d4qtg")
region = Rect2(34, 0, 34, 35)

[sub_resource type="AtlasTexture" id="AtlasTexture_tihaj"]
atlas = ExtResource("6_odrv2")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ma6b"]
atlas = ExtResource("6_odrv2")
region = Rect2(128, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_v2nav"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qkpq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cu7n1")
}],
"loop": true,
"name": &"s_duergar_shield",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tihaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ma6b")
}],
"loop": true,
"name": &"s_junkbot_larm_shield",
"speed": 5.0
}]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ty5ks"]
size = Vector2(4, 4)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qfgrm"]

[sub_resource type="GDScript" id="GDScript_47sbk"]
resource_name = "ready_label"
script/source = "extends RichTextLabel

signal finish_loading

func _ready() -> void:
	hide()

func start_loading( speed := 1.0 ) -> void:
	show()
	
	visible_ratio 	= 0.0
	modulate		= Color.ORANGE_RED
	modulate.a 		= 0.0
	
	var tween := create_tween()
	tween.tween_property( self, \"modulate:a\", 		1.0, 0.15 )
	tween.tween_property( self, \"visible_ratio\", 	1.0, speed )
	tween.tween_interval( 0.1 )
	tween.tween_callback( emit_signal.bind(\"finish_loading\") )
	tween.tween_property( self, \"modulate\", 		Color.WHITE, 0.15 )
	tween.tween_interval( 0.2 )
	tween.tween_property( self, \"modulate:a\", 		0.0, 0.15 )
	tween.tween_callback( hide )
"

[node name="o_cbt_hoopz" type="RigidBody2D" unique_id=1194021791 node_paths=PackedStringArray("hoopz_roll_direction", "combat_upper_sprite", "combat_lower_sprite", "combat_arm_back", "combat_arm_front", "combat_weapon", "combat_weapon_parts", "combat_weapon_spots", "combat_shield", "gun_muzzle", "gun_handler", "hoopz_normal_body", "step_smoke", "hit_timer", "i_frame_timer", "ActorNav", "ActorCol")]
collision_layer = 3
collision_mask = 1835029
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_sbutq")
gravity_scale = 0.0
lock_rotation = true
contact_monitor = true
max_contacts_reported = 2
linear_damp = 10.0
script = ExtResource("1_cd2oh")
hoopz_roll_direction = NodePath("hoopz_roll_direction")
combat_upper_sprite = NodePath("combat_upper_body")
combat_lower_sprite = NodePath("combat_lower_body")
combat_arm_back = NodePath("combat_arm_back")
combat_arm_front = NodePath("combat_arm_front")
combat_weapon = NodePath("combat_weapon")
combat_weapon_parts = NodePath("combat_weapon_parts")
combat_weapon_spots = NodePath("combat_weapon_spots")
combat_shield = NodePath("combat_shield")
gun_muzzle = NodePath("gun_muzzle")
gun_handler = NodePath("Gun_Handler™_TurnBased_Edition")
ROLL = "diaper_gooroll"
ROLL_BACK = "diaper_gooroll"
hoopz_normal_body = NodePath("hoopz_normal_body")
step_smoke = NodePath("step_smoke")
hit_timer = NodePath("hit_timer")
i_frame_timer = NodePath("i_frame_timer")
ActorNav = NodePath("ActorNav")
ActorCol = NodePath("hoopz_collision")
roll_impulse = 60000
walk_damp = 14.0
roll_damp = 3.5

[node name="Gun_Handler™_TurnBased_Edition" type="Node" parent="." unique_id=551657207]
script = ExtResource("2_rvl68")

[node name="pre_shooting_timer" type="Timer" parent="Gun_Handler™_TurnBased_Edition" unique_id=1513167503]
one_shot = true

[node name="firing_rate" type="Timer" parent="Gun_Handler™_TurnBased_Edition" unique_id=1538810503]
one_shot = true

[node name="post_shooting_timer" type="Timer" parent="Gun_Handler™_TurnBased_Edition" unique_id=63894515]
wait_time = 0.5
one_shot = true

[node name="o_Shadow" parent="." unique_id=888000035 instance=ExtResource("2_yky03")]

[node name="hoopz_collision" type="CollisionShape2D" parent="." unique_id=364912074]
process_priority = -1
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_aubae")

[node name="step_smoke" parent="." unique_id=190088780 instance=ExtResource("3_rvl68")]
position = Vector2(0, -1)
amount = 30

[node name="hoopz_roll_direction" type="Line2D" parent="." unique_id=893957849]
modulate = Color(1, 1, 1, 0.87237257)
points = PackedVector2Array(12, 0, 24, 0)
width_curve = SubResource("Curve_qfgrm")
gradient = SubResource("Gradient_wsajw")
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = SubResource("GDScript_qkpq4")

[node name="hoopz_normal_body" type="AnimatedSprite2D" parent="." unique_id=1205660132]
y_sort_enabled = true
sprite_frames = ExtResource("4_cd2oh")
animation = &"won_hard"
speed_scale = 1.5
centered = false
offset = Vector2(-22, -41)

[node name="combat_shield" type="AnimatedSprite2D" parent="." unique_id=996603006]
visible = false
sprite_frames = SubResource("SpriteFrames_v2nav")
animation = &"s_duergar_shield"
offset = Vector2(0, -14)

[node name="aim_origin" type="Marker2D" parent="." unique_id=170695529]
position = Vector2(0, -16)

[node name="combat_lower_body" type="AnimatedSprite2D" parent="." unique_id=983563560]
visible = false
sprite_frames = ExtResource("7_yky03")
animation = &"aim_shuffle"
centered = false
offset = Vector2(-22, -42)

[node name="combat_arm_back" type="AnimatedSprite2D" parent="." unique_id=1302864403]
visible = false
sprite_frames = ExtResource("8_rvl68")
animation = &"s_HoopzTorso_Handgun"
centered = false
offset = Vector2(-22, -41)

[node name="combat_upper_body" type="AnimatedSprite2D" parent="." unique_id=1977329688]
visible = false
sprite_frames = ExtResource("9_ms3eb")
animation = &"aim"
centered = false
offset = Vector2(-22, -41)

[node name="combat_weapon" type="AnimatedSprite2D" parent="." unique_id=4807525]
visible = false
sprite_frames = ExtResource("10_ekk7t")
animation = &"s_Pistol"

[node name="combat_weapon_parts" type="AnimatedSprite2D" parent="." unique_id=1440716005]
visible = false
sprite_frames = ExtResource("11_n6pea")
animation = &"s_AssaultRifle"

[node name="combat_weapon_spots" type="AnimatedSprite2D" parent="." unique_id=2096469239]
visible = false
sprite_frames = ExtResource("12_kss28")
animation = &"s_AssaultRifle"

[node name="combat_arm_front" type="AnimatedSprite2D" parent="." unique_id=1370503206]
visible = false
sprite_frames = ExtResource("13_d4qtg")
animation = &"s_HoopzTorso_Handgun"
centered = false
offset = Vector2(-22, -41)

[node name="AudioListener2D" type="AudioListener2D" parent="." unique_id=930576222]
current = true

[node name="ActorNav" type="NavigationAgent2D" parent="." unique_id=1481379576]

[node name="gun_muzzle" type="Marker2D" parent="." unique_id=966262269]

[node name="debug_text" type="Sprite2D" parent="gun_muzzle" unique_id=1979782784]
texture = SubResource("PlaceholderTexture2D_ty5ks")

[node name="ready_label" type="RichTextLabel" parent="." unique_id=813172750]
material = SubResource("ShaderMaterial_qfgrm")
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.0
offset_top = -57.0
offset_right = 26.0
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(26, 8)
theme_override_fonts/normal_font = ExtResource("14_m7ku1")
bbcode_enabled = true
text = "[wave amp=20.0 freq=3.0 connected=1]Ready...[/wave]"
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1
visible_characters = 0
visible_ratio = 0.0
script = SubResource("GDScript_47sbk")

[node name="hit_timer" type="Timer" parent="." unique_id=1579616150]
one_shot = true

[node name="gun_down_timer" type="Timer" parent="." unique_id=845813867]
one_shot = true

[node name="i_frame_timer" type="Timer" parent="." unique_id=1645186184]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_combat_actor_entered"]
[connection signal="animation_finished" from="hoopz_normal_body" to="." method="_on_hoopz_normal_body_animation_finished"]
[connection signal="frame_changed" from="hoopz_normal_body" to="." method="_on_hoopz_upper_body_frame_changed"]
[connection signal="frame_changed" from="combat_lower_body" to="." method="_on_combat_lower_body_frame_changed"]
[connection signal="timeout" from="hit_timer" to="." method="_on_hit_timer_timeout"]
[connection signal="timeout" from="gun_down_timer" to="." method="_on_gun_down_timer_timeout"]
